<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gdn.qa.module.api.automation.test</groupId>
    <artifactId>new-automation-project</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Sample Automation Project with Badak Cucumber 6</name>

    <parent>
        <artifactId>badak-core-parent</artifactId>
        <groupId>com.gdn.qa.automation.core</groupId>
        <version>3.9.22</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>UTF-8</encoding>
        <maven.failsafe.plugin>3.0.0-M7</maven.failsafe.plugin>

        <!--SET NUMBER OF TEST THREAD-->
        <parallel.thread>2</parallel.thread>
        <parallel.fork>1</parallel.fork>

        <!--CHANGE THIS VALUE FOR DIFFERENT TESTING ENVIRONMENT-->
        <serenity.properties>serenity.properties</serenity.properties>
        <spring.path>classpath:/application-UATB.properties</spring.path>

        <serenity.testlink.integration.version>4.1.3</serenity.testlink.integration.version>
    </properties>

    <dependencies>
        <!--Badak and Spring Dependencies. It's not recommended to put any dependencies above this-->
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-utility</artifactId>
        </dependency>
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-core</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <!--Your custom Dependency starts here-->

    </dependencies>

    <distributionManagement>
        <repository>
            <id>libs-releases-local.artifactory.gdn-app.com</id>
            <name>libs-releases-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-releases-local</url>
        </repository>
        <snapshotRepository>
            <id>libs-snapshots-local.artifactory.gdn-app.com</id>
            <name>libs-snapshots-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-snapshots-local</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>libs-releases-local.artifactory.gdn-app.com</id>
            <name>libs-releases-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-releases-local/</url>
            <layout>default</layout>
            <releases>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>libs-snapshots-local.artifactory.gdn-app.com</id>
            <name>libs-snapshots-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-snapshots-local/</url>
            <layout>default</layout>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>libs-releases-local.artifactory.gdn-app.com</id>
            <name>libs-releases-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-releases-local/</url>
            <layout>default</layout>
            <releases>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>libs-snapshots-local.artifactory.gdn-app.com</id>
            <name>libs-snapshots-local.artifactory.gdn-app.com</name>
            <url>https://artifactory.gdn-app.com/artifactory/libs-snapshots-local/</url>
            <layout>default</layout>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <testSource>21</testSource>
                    <testTarget>21</testTarget>
                    <testRelease>21</testRelease>
                    <release>21</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.34</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M7</version>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>**/*Runner*.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <cucumber.options>--junit,--step-notifications</cucumber.options>
                        <spring.config.location>${spring.path}</spring.config.location>
                        <properties>${serenity.properties}</properties>
                    </systemPropertyVariables>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                    <parallel>classes</parallel>
                    <parallel>methods</parallel>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-single-page-report</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-navigator-report</artifactId>
                        <version>2.3.12</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <reports>single-page-html,navigator</reports>
                </configuration>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Uncomment this to Integrate with testlink-->
            <!--            <plugin>-->
            <!--                <groupId>com.gdn.qa.util</groupId>-->
            <!--                <artifactId>serenity-testlink-integration</artifactId>-->
            <!--                <version>${serenity.testlink.integration.version}</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>post-integration-test</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>testlink-serenity</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <testlinkURL>https://testlink.gdn-app.com/lib/api/xmlrpc/v1/xmlrpc.php-->
            <!--                            </testlinkURL>-->
            <!--                            <devKey>${testlink.devkey}</devKey>-->
            <!--                            <projectName>${testlink.project}</projectName>-->
            <!--                            <testPlanName>${testlink.plan}</testPlanName>-->
            <!--                            <buildName>${testlink.build}</buildName>-->
            <!--                            <platformName>${testlink.applicationPlatform}</platformName>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
        </plugins>
    </build>
</project>
